tdf#150594 - Prevent crash while searching for the next outline node

Change-Id: Ia83968b26f0053815c0da9910aa00f9dde577246
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138850
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit 33c6dcfaab35a70f8794a67d31fbec636cb485d5)